# ycc

./: .clang-format  .gitignore  9cc.c  9cc.h  CMakeLists.txt  Makefile  README.md  codegen.c  dump.c  integration_test.sh  main.c  parse.c  run.sh  test.sh  test5  tokenize.c  unit_test.sh  util.c  util_test.c  ycc  ycc.h
.github/workflows/: c_test.yml
example/: hello.c
src/: CMakeLists.txt  codegen.c  dump.c  main.c  parse.c  sema_parse.c  tokenize.c  util.c  util_test.c  ycc.h
test/: fibonacci.c  hello.c  test.c
tests/: test0.c  test1.c  test2.c  test3.c  test4.c  test5.c
